# brarr

./: .dockerignore  .env.example  .gitattributes  .gitignore  .no-otto  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.dev  INITIAL_PROMPT.md  LICENSE  README.md  clippy.toml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  rustfmt.toml  tmp_indexers.py  tmp_query.py  tmp_rookie.py  tmp_rookie2.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  docker.yml
crates/brarr-arr/: Cargo.toml
crates/brarr-arr/src/: lib.rs
crates/brarr-arr/tests/: client_wiremock.rs
crates/brarr-cli/: Cargo.toml  build.rs
crates/brarr-cli/src/: cli.rs  config.rs  lib.rs  main.rs  remote.rs  scoring.rs  search.rs
crates/brarr-cli/tests/: remote_grpc_integration.rs  search_integration.rs
crates/brarr-core/: Cargo.toml
crates/brarr-core/src/: enrichment.rs  ids.rs  language.rs  lib.rs  provider.rs  release.rs  score.rs  tags.rs  tracker.rs
crates/brarr-decision-service/: Cargo.toml
crates/brarr-decision-service/src/: engine.rs  lib.rs  loader.rs  outcome.rs  rule.rs
crates/brarr-mediainfo/: Cargo.toml
crates/brarr-mediainfo/src/: enrichment.rs  error.rs  language.rs  lib.rs  parser.rs  types.rs
crates/brarr-mediainfo/tests/: enrichment_real_fixtures.rs  parse_real_fixtures.rs
crates/brarr-mediainfo/tests/fixtures/: shadow_2160p.txt  vnlls_1080p.txt
crates/brarr-orchestrator/: Cargo.toml  build.rs
crates/brarr-orchestrator/migrations/: 20260515120000_init.sql  20260515130000_plugin_path.sql  20260516120000_rename_to_providers.sql  20260516130000_decision_urls.sql  20260516140000_decision_provider_kind.sql  20260517120000_decision_published_at.sql  20260517130000_arr_instances.sql  20260517140000_push_history.sql  20260517150000_push_history_rejections.sql  20260517160000_providers_enabled.sql  20260517170000_searches_tv_axis.sql  20260518120000_quality_profiles.sql  20260519120000_decision_language_chips.sql  20260520120000_quality_profile_rules.sql  20260521120000_decision_profile_scores.sql  20260524120000_webhook_events.sql  20260524130000_settings.sql  20260613120000_arr_webhook_driven.sql
crates/brarr-orchestrator/proto/: brarr.proto
crates/brarr-orchestrator/src/: auth.rs  error.rs  lib.rs  main.rs  maintenance.rs  poll.rs  push.rs  search.rs  state.rs
crates/brarr-orchestrator/src/db/: arr_instances.rs  decisions.rs  maintenance.rs  mod.rs  providers.rs  push_history.rs  quality_profiles.rs  searches.rs  settings.rs  trackers.rs  webhook_events.rs
crates/brarr-orchestrator/src/grpc/: mod.rs  proto.rs  service.rs
crates/brarr-orchestrator/src/web/: ip.rs  mod.rs  render.rs  routes.rs  templates.rs  torznab.rs  webhooks.rs
crates/brarr-orchestrator/static/: copy.js  datetime.js  modal.js  nav.js  releases.js  theme.js
crates/brarr-orchestrator/styles/: input.css
crates/brarr-orchestrator/templates/: arr_instances.html  base.html  dashboard.html  error.html  login.html  profile_editor.html  profiles.html  providers.html  pushes.html  releases.html  search_detail.html  searches_index.html  settings.html  trackers.html  webhooks.html
crates/brarr-orchestrator/templates/partials/: arr_instances_list.html  edit_arr_instance_modal.html  edit_provider_modal.html  new_profile_modal.html  new_search_modal.html  providers_list.html  release_card.html  search_row_list.html  trackers_list.html
crates/brarr-orchestrator/tests/: auth_bypass.rs  auth_integration.rs  grpc_integration.rs  http_integration.rs  plugin_search_integration.rs  searches_index_integration.rs  torznab_integration.rs  webhooks_integration.rs  webhooks_ui_integration.rs
crates/brarr-orchestrator/tests/fixtures/webhooks/: radarr_movie_added.json  radarr_test.json  sonarr_episode_added.json  sonarr_series_add.json  sonarr_test.json
crates/brarr-plugin-host/: Cargo.toml
crates/brarr-plugin-host/src/: dto.rs  error.rs  host.rs  lib.rs  plugin.rs  ticker.rs
crates/brarr-plugin-host/tests/: host_fetch_wat.rs  limits_wat.rs  plugin_wat.rs
crates/brarr-tracker-newznab/: Cargo.toml
crates/brarr-tracker-newznab/src/: client.rs  convert.rs  dto.rs  error.rs  lib.rs
crates/brarr-tracker-newznab/tests/: client_wiremock.rs
crates/brarr-tracker-unit3d/: Cargo.toml
crates/brarr-tracker-unit3d/src/: client.rs  convert.rs  dto.rs  error.rs  lib.rs  provider_impl.rs  retry.rs
crates/brarr-tracker-unit3d/tests/: client_wiremock.rs
docs/: ARCHITECTURE.md  DB-MAINTENANCE.md
docs/requests-response-examples/: shadow.json  vnlls.json
scripts/: build-css.ps1  build-css.sh  db-maintenance.sql  install-tailwind.ps1  install-tailwind.sh
