[workspace]
resolver = "3"
members = [
    "crates/brarr-mediainfo",
    "crates/brarr-core",
    "crates/brarr-tracker-unit3d",
    "crates/brarr-tracker-newznab",
    "crates/brarr-cli",
    "crates/brarr-orchestrator",
    "crates/brarr-decision-service",
    "crates/brarr-plugin-host",
    "crates/brarr-arr",
]

[workspace.package]
version = "0.1.5"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["brarr contributors"]
repository = "https://github.com/lluiseduardo-silva/brarr"

# Lints rust globais — herdados por todos os crates via `[lints] workspace = true`.
[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unused_must_use = "deny"

# Lints clippy globais. `pedantic` cobre o grosso do estilo idiomático;
# exceções pontuais devem ser documentadas (`#[allow(clippy::xxx, reason = "...")]`).
[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"

# Otimizações em release — pode revisitar depois conforme tamanho/perf.
[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

# Builds de dev: encolhe o `target/` sem perder backtraces dos nossos
# crates. `line-tables-only` mantém arquivo/linha nas stack traces mas
# corta o grosso do debuginfo; zerar debug das dependências (que somam a
# maior parte do `target/`) é o que mais reduz o tamanho em disco.
[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
debug = false
