[package]
name = "brarr-arr"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
reqwest = { version = "0.13.3", default-features = false, features = ["default-tls", "json", "gzip"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
time = { version = "0.3.45", features = ["formatting", "serde-well-known"] }
tracing = "0.1.44"
url = "2.5.8"

[lints]
workspace = true

[dev-dependencies]
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6.5"
