[package]
name = "brarr-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# Renomeia o binário de `brarr-cli` (default = nome do package) para
# `brarr` — o nome que o INITIAL_PROMPT.md usa nos exemplos de invocação.
[[bin]]
name = "brarr"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.102"
brarr-core = { version = "0.1.0", path = "../brarr-core" }
brarr-decision-service = { version = "0.1.0", path = "../brarr-decision-service" }
brarr-tracker-unit3d = { version = "0.1.0", path = "../brarr-tracker-unit3d" }
clap = { version = "4.6.1", features = ["derive"] }
directories = "6.0.0"
futures = "0.3.32"
prost = "0.14.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "fs"] }
toml = "1.1.2"
tonic = "0.14.5"
tonic-prost = "0.14.5"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
url = { version = "2.5.8", features = ["serde"] }

[lints]
workspace = true

[dev-dependencies]
brarr-orchestrator = { path = "../brarr-orchestrator" }
wiremock = "0.6.5"

[build-dependencies]
protoc-bin-vendored = "3.2.0"
tonic-build = "0.14.5"
tonic-prost-build = "0.14.5"
