[package]
name = "brarr-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
time = { version = "0.3.45", features = ["formatting", "parsing", "macros"] }
url = "2.5.8"

[lints]
workspace = true

[dev-dependencies]
tokio = { version = "1.52.3", default-features = false, features = ["macros", "rt"] }
