[package]
name = "brarr-decision-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
brarr-core = { version = "0.1.0", path = "../brarr-core" }
regex = "1.12"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
toml = "1.1.2"

[lints]
workspace = true

[dev-dependencies]
serde_json = "1.0.149"
url = "2.5.8"
