[package]
name = "brarr-mediainfo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
brarr-core = { version = "0.1.0", path = "../brarr-core" }
thiserror = "2.0.18"

[lints]
workspace = true
