[package]
name = "brarr-orchestrator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "brarr-orchestrator"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.102"
askama = "0.14.0"
axum = { version = "0.8.9", default-features = false, features = ["macros", "http1", "tokio", "json", "query", "tracing", "form"] }
brarr-arr = { version = "0.1.0", path = "../brarr-arr" }
brarr-core = { version = "0.1.0", path = "../brarr-core" }
brarr-decision-service = { version = "0.1.0", path = "../brarr-decision-service" }
brarr-plugin-host = { version = "0.1.0", path = "../brarr-plugin-host" }
brarr-tracker-newznab = { version = "0.1.0", path = "../brarr-tracker-newznab" }
brarr-tracker-unit3d = { version = "0.1.0", path = "../brarr-tracker-unit3d" }
futures = "0.3.32"
prost = "0.14.3"
quick-xml = "0.40.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", default-features = false, features = ["sqlite", "runtime-tokio", "macros", "migrate", "uuid", "time"] }
subtle = "2.6.1"
thiserror = "2.0.18"
time = { version = "0.3.45", features = ["serde", "formatting", "macros"] }
tokio = { version = "1.52.3", default-features = false, features = ["macros", "rt-multi-thread", "signal", "fs", "sync", "net", "time"] }
tonic = "0.14.5"
tonic-prost = "0.14.5"
tower = { version = "0.5.3", default-features = false, features = ["util"] }
tower-http = { version = "0.6.10", default-features = false, features = ["trace", "fs"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
url = { version = "2.5.8", features = ["serde"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }
wasmtime = { version = "34.0.2", default-features = false, features = ["cranelift", "parallel-compilation", "runtime", "cache", "wat", "async"] }

[lints]
workspace = true

[build-dependencies]
protoc-bin-vendored = "3.2.0"
tonic-build = "0.14.5"
tonic-prost-build = "0.14.5"

[dev-dependencies]
reqwest = { version = "0.13.3", default-features = false, features = ["default-tls", "form", "json"] }
wat = "1.249.0"
