[package]
name = "brarr-tracker-newznab"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
brarr-core = { version = "0.1.0", path = "../brarr-core" }
quick-xml = "0.40.1"
reqwest = { version = "0.13.3", default-features = false, features = ["default-tls", "gzip", "deflate", "brotli"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
time = { version = "0.3.45", features = ["parsing", "macros", "formatting"] }
tokio = { version = "1.52.3", default-features = false, features = ["time"] }
tracing = "0.1.44"
url = "2.5.8"

[lints]
workspace = true

[dev-dependencies]
tokio = { version = "1.52.3", default-features = false, features = ["macros", "rt", "rt-multi-thread"] }
wiremock = "0.6.5"
