[package]
name = "brarr-tracker-unit3d"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
brarr-core = { version = "0.1.0", path = "../brarr-core" }
brarr-mediainfo = { version = "0.1.0", path = "../brarr-mediainfo" }
reqwest = { version = "0.13.3", default-features = false, features = ["json", "default-tls", "http2", "charset", "stream", "query", "gzip", "deflate", "brotli"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.3", default-features = false, features = ["time"] }
tracing = "0.1.44"
url = "2.5.8"

[lints]
workspace = true

[dev-dependencies]
tokio = { version = "1.52.3", features = ["macros", "rt", "rt-multi-thread"] }
wiremock = "0.6.5"
